--- a/Project3/src/analysis.ipynb
+++ b/Project3/src/analysis.ipynb
@@ -1023,11 +1023,82 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### One day before event"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Logistic Regression coefficients (1 day before academic):\n",
+      " chrome_visits             0.000434\n",
+      "youtube_videos_watched    0.001306\n",
+      "dtype: float64\n",
+      "Logistic Regression coefficients (1 day before personal):\n",
+      " chrome_visits            -0.010743\n",
+      "youtube_videos_watched   -0.005672\n",
+      "dtype: float64\n",
+      "Linear effect (1d before academic → YouTube): β = 57.873\n",
+      "Linear effect (1d before personal → YouTube): β = -176.706\n",
+      "Linear effect (1d before academic → Chrome): β = 109.114\n",
+      "Linear effect (1d before personal → Chrome): β = -282.944\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Academic\n",
+    "academic_dates = events.index[events['event_type']=='academic']\n",
+    "days_before_ac = academic_dates - pd.Timedelta(days=1)\n",
+    "df['before_academic_event'] = df.index.isin(days_before_ac).astype(int)\n",
+    "\n",
+    "# Personal\n",
+    "personal_dates = events.index[events['event_type']=='personal']\n",
+    "days_before_pe = personal_dates - pd.Timedelta(days=1)\n",
+    "df['before_personal_event'] = df.index.isin(days_before_pe).astype(int)\n",
+    "\n",
+    "\n",
+    "# --- Logistic regression: predict “day before academic” from activity ---\n",
+    "X = df[['youtube_videos_watched','chrome_visits']]\n",
+    "y = df['before_academic_event']\n",
+    "log_ac = LogisticRegression(max_iter=1000).fit(X, y)\n",
+    "print(\"Logistic Regression coefficients (1 day before academic):\\n\",\n",
+    "      pd.Series(log_ac.coef_[0], index=X.columns).sort_values())\n",
+    "\n",
+    "# --- Logistic regression: predict “day before personal” from activity ---\n",
+    "y = df['before_personal_event']\n",
+    "log_pe = LogisticRegression(max_iter=1000).fit(X, y)\n",
+    "print(\"Logistic Regression coefficients (1 day before personal):\\n\",\n",
+    "      pd.Series(log_pe.coef_[0], index=X.columns).sort_values())\n",
+    "\n",
+    "# --- Linear regression: effect of “day before academic” on YouTube views ---\n",
+    "lin_ac_yt = LinearRegression().fit(df[['before_academic_event']],\n",
+    "                                   df['youtube_videos_watched'])\n",
+    "print(f\"Linear effect (1d before academic → YouTube): β = {lin_ac_yt.coef_[0]:.3f}\")\n",
+    "\n",
+    "# --- Linear regression: effect of “day before personal” on YouTube views ---\n",
+    "lin_pe_yt = LinearRegression().fit(df[['before_personal_event']],\n",
+    "                                   df['youtube_videos_watched'])\n",
+    "print(f\"Linear effect (1d before personal → YouTube): β = {lin_pe_yt.coef_[0]:.3f}\")\n",
+    "\n",
+    "# --- Linear regression: effect of “day before academic” on Chrome visits ---\n",
+    "lin_ac_ch = LinearRegression().fit(df[['before_academic_event']],\n",
+    "                                   df['chrome_visits'])\n",
+    "print(f\"Linear effect (1d before academic → Chrome): β = {lin_ac_ch.coef_[0]:.3f}\")\n",
+    "\n",
+    "# --- Linear regression: effect of “day before personal” on Chrome visits ---\n",
+    "lin_pe_ch = LinearRegression().fit(df[['before_personal_event']],\n",
+    "                                   df['chrome_visits'])\n",
+    "print(f\"Linear effect (1d before personal → Chrome): β = {lin_pe_ch.coef_[0]:.3f}\")"
+   ]
   },
   {
    "cell_type": "code",
